fix overflow-x issue

--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@
         --fs-preset-3 :   1.75rem;
         --fs-preset-4 :      1rem;
         --space-lr    :   2.75rem;
-
     }    
 }
 
@@ -154,19 +153,23 @@ select {
     outline: none;
 }
 
+html {
+    /* fix overflow issue */
+    overflow-x: hidden;
+}
+
 /* ------------------------------------------------------ */
-/*                          body                          */
+/*                          Body                          */
 /* ------------------------------------------------------ */
 
 body {
     position: relative;
-    overflow-x: hidden;
 }
 
 .primary-layout {
 
     /* calculator content popout and full size */
-    --calc-content    : min(100% - (var(--space-lr) *2), var(--content-size)); 
+    --calc-content    : min(100% - (var(--space-lr) * 2), var(--content-size)); 
     --calc-breakout   : minmax(0, calc((var(--breakout-size) - var(--content-size)) * 0.5));
     --calc-full-width : minmax(var(--space-lr), var(--full-wdth));
 
@@ -178,7 +181,7 @@ body {
                 [content-start] var(--calc-content) [content-end] 
                     var(--calc-breakout)  [breakout-end] 
                         var(--calc-full-width)  [fullwidth-end];
-    }
+}
 
 .primary-layout > * {
     grid-column: content;
@@ -190,7 +193,6 @@ body {
 
 .primary-header {
     padding-block-start: 2rem;
-
     display: grid;
     align-items: center;
     grid-template-columns: 1fr max-content;
@@ -385,7 +387,7 @@ body {
     /* ------------------------------------------------------ */
 
     .hero-wrapper {
-        --bg-hero-height:24.5rem;      
+        --bg-hero-height:26rem;      
         padding-block-start: 3.5rem;
         min-height: 31rem;
     }
@@ -396,8 +398,8 @@ body {
     }
     
     .hero-wrapper::after {
-        scale: 1.15;
         max-height: 5rem;
+        scale: 1.15;
         border-bottom-right-radius: 65%;
         border-bottom-left-radius: 65%;
         margin-block-start: var(--bg-hero-height);
@@ -494,7 +496,6 @@ body {
 
     .hero-wrapper {
         --bg-hero-height: 33rem;
-
         padding-block-start: 3.5rem;
         min-height: 39rem;
     }
@@ -505,8 +506,8 @@ body {
     }
     
     .hero-wrapper::after {
-        scale: 1.15;
         max-height: 5rem;
+        scale: 1.15;
         border-bottom-right-radius: 75%;
         border-bottom-left-radius:  75%;
         margin-block-start: var(--bg-hero-height);
@@ -514,7 +515,7 @@ body {
     }
 
     .hero::before {
-        content: url('image/bg-pattern-1.svg');
+        content: url(image/bg-pattern-1.svg);
         position: absolute;
         top: 8rem;
         left: -13rem;
@@ -522,7 +523,7 @@ body {
 
     .hero::after {
         position: absolute;
-        content: url('image/bg-pattern-2.svg');
+        content: url(image/bg-pattern-2.svg);
         top: 20rem;
         right: -4rem;
     }
@@ -538,7 +539,6 @@ body {
 
     .featrue-wrapper {
         --bg-feature-height : 78rem;
-
         padding-block-start: 3.5rem;
         padding-block-end: 7rem;
     }
@@ -549,8 +549,8 @@ body {
     }
 
     .featrue-wrapper::after {
-        scale: 1.15;
         max-height: 5rem;
+        scale: 1.15;
         border-bottom-right-radius: 75%;
         border-bottom-left-radius: 75%;
         margin-block-start: var(--bg-feature-height);
@@ -616,7 +616,6 @@ body {
 
     .hero-wrapper {
         --bg-hero-height:33.5rem; 
-
         padding-block-start: 3.5rem;
         min-height: 52.5rem;       
     }
@@ -627,14 +626,14 @@ body {
     }
     
     .hero-wrapper::after {
-        scale: 1.15;
         max-height: 10rem;
+        scale: 1.15;
         border-bottom-right-radius: 95%;
         border-bottom-left-radius:  95%;
         margin-block-start: var(--bg-hero-height);
         background-color: var(--clr-purple-900);
     }
-
+    
     .hero::before {
         content: url('image/bg-pattern-1.svg');
         position: absolute;
@@ -660,7 +659,6 @@ body {
 
     .featrue-wrapper {
         --bg-feature-height: 79rem;
-
         padding-block-start:5.5rem;
         padding-block-end: 9rem;
         grid-template-columns: 1fr 1fr 1fr;
@@ -673,8 +671,8 @@ body {
     }
 
     .featrue-wrapper::after {
-        scale: 1.15;
         max-height: 10rem;
+        scale: 1.15;
         border-bottom-right-radius: 95%;
         border-bottom-left-radius: 95%;
         margin-block-start: var(--bg-feature-height);
